--- a/mongo.yaml
+++ b/mongo.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: PersistentVolume
 metadata:
   name: mongo-pv
+  namespace: ${NAMESPACE}
 spec:
   capacity:
     storage: 1Gi
@@ -18,6 +19,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: mongo-pvc
+  namespace: ${NAMESPACE}
 spec:
   resources:
     requests:
@@ -32,6 +34,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: mongodb-config
+  namespace: ${NAMESPACE}
 data:
   MONGO_INITDB_ROOT_USERNAME: springuser
   MONGO_INITDB_ROOT_PASSWORD: springpassword
@@ -42,6 +45,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: mongodb
+  namespace: ${NAMESPACE}
 spec:
   selector:
     matchLabels:
@@ -74,6 +78,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: mongodb-service
+  namespace: ${NAMESPACE}
 spec:
   ports:
     - port: 27017
