--- a/spring.yaml
+++ b/spring.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: springboot-app
+  namespace: ${NAMESPACE}
 spec:
   replicas: 1
   selector:
@@ -42,6 +43,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: springboot-app-service
+  namespace: ${NAMESPACE}
 spec:
   type: NodePort
   ports:
